@@ -5430,7 +5430,6 @@ def dep_zapdeps(unreduced, reduced, myroot, use_binaries=0, trees=None):
 	if trees is None:
 		global db
 		trees = db
-	selective = trees[myroot].get("selective", False)
 	writemsg("ZapDeps -- %s\n" % (use_binaries), 2)
 	if not reduced or unreduced == ["||"] or dep_eval(reduced):
 		return []
@@ -5491,13 +5490,6 @@ def dep_zapdeps(unreduced, reduced, myroot, use_binaries=0, trees=None):
 				avail_pkg = avail_pkg[-1] # highest (ascending order)
 				avail_slot = "%s:%s" % (dep_getkey(atom),
 					mydbapi.aux_get(avail_pkg, ["SLOT"])[0])
-			elif not avail_pkg:
-				if selective:
-					avail_pkg = vardb.match(atom)
-					if avail_pkg:
-						avail_pkg = avail_pkg[-1] # highest (ascending order)
-						avail_slot = "%s:%s" % (dep_getkey(atom),
-							vardb.aux_get(avail_pkg, ["SLOT"])[0])
 			if not avail_pkg:
 				all_available = False
 				break
